Add updateRole service
- Add 404 DataNotFound error definition
