# src/services/updateRole/types.ts
@@ -1,0 +1,9 @@
+export interface IReqBody {
+  update_data: {
+    role_name: any;
+    permissions: any;
+  };
+}
+export interface IResLocals {
+  roleName: string;
+}
